--- a/TestingQR/TestingQR.csproj
+++ b/TestingQR/TestingQR.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Models\Mail.html" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Models\Mail.html" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="QRCoder" Version="1.3.9" />
   </ItemGroup>
 
